cse262/AsaCompiler1/target/scala-2.12/src_managed/main/antlr4/AsaParser.java
// Generated from /Users/jake/Documents/cse262/AsaCompiler1/src/main/antlr4/Asa.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AsaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, AND=3, ASSIGN=4, ARRAY=5, BEGIN=6, CASE=7, COLON=8, COMMA=9, 
		CONST=10, DIV=11, DIVIDE=12, DO=13, DOTDOT=14, DOWNTO=15, ELSE=16, END=17, 
		EQUALS=18, FOR=19, GREATERTHAN=20, GREATERTHANOREQUALTO=21, IF=22, IN=23, 
		LBRACE=24, LESSTHAN=25, LBRACKET=26, LESSTHANOREQUALTO=27, LPAREN=28, 
		LSHIFT=29, MINUS=30, MOD=31, NOTEQUALTO=32, OF=33, OR=34, NOT=35, PERIOD=36, 
		PLUS=37, PRINTF=38, PROGRAM=39, RBRACE=40, RBRACKET=41, REPEAT=42, RPAREN=43, 
		RSHIFT=44, SEMICOLON=45, SET=46, SYMMETRIC_DIFFERENCE=47, THEN=48, TIMES=49, 
		TO=50, UNTIL=51, VAR=52, WHILE=53, DECIMALINTEGERLITERAL=54, HEXADECIMALINTEGERLITERAL=55, 
		OCTALINTEGERLITERAL=56, FLOATINGPOINTLITERAL=57, STRINGLITERAL=58, IDENT=59, 
		UnterminatedStringLiteral=60, COMMENT=61, WS=62;
	public static final int
		RULE_program = 0, RULE_block = 1, RULE_constant_definition = 2, RULE_literal = 3, 
		RULE_integerLiteral = 4, RULE_booleanLiteral = 5, RULE_setLiteral = 6, 
		RULE_variable_declaration = 7, RULE_atype = 8, RULE_statement = 9, RULE_assignment_statement = 10, 
		RULE_lhsreference = 11, RULE_rhsvalue = 12, RULE_compound_statement = 13, 
		RULE_while_statement = 14, RULE_repeat_statement = 15, RULE_for_statement = 16, 
		RULE_if_statement = 17, RULE_printf_statement = 18, RULE_case_statement = 19, 
		RULE_case_limb = 20, RULE_logicalexpression = 21, RULE_relationalexpression = 22, 
		RULE_simpleexpression = 23, RULE_term = 24, RULE_factor = 25, RULE_negation = 26, 
		RULE_identifier = 27;
	public static final String[] ruleNames = {
		"program", "block", "constant_definition", "literal", "integerLiteral", 
		"booleanLiteral", "setLiteral", "variable_declaration", "atype", "statement", 
		"assignment_statement", "lhsreference", "rhsvalue", "compound_statement", 
		"while_statement", "repeat_statement", "for_statement", "if_statement", 
		"printf_statement", "case_statement", "case_limb", "logicalexpression", 
		"relationalexpression", "simpleexpression", "term", "factor", "negation", 
		"identifier"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'true'", "'false'", "'and'", "':='", "'array'", "'begin'", "'case'", 
		"':'", "','", "'const'", "'div'", "'/'", "'do'", "'..'", "'downto'", "'else'", 
		"'end'", "'='", "'for'", "'>'", "'>='", "'if'", "'in'", "'{'", "'<'", 
		"'['", "'<='", "'('", "'<<'", "'-'", "'mod'", "'<>'", "'of'", "'or'", 
		"'not'", "'.'", "'+'", "'printf'", "'program'", "'}'", "']'", "'repeat'", 
		"')'", "'>>'", "';'", "'set'", "'><'", "'then'", "'*'", "'to'", "'until'", 
		"'var'", "'while'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, "AND", "ASSIGN", "ARRAY", "BEGIN", "CASE", "COLON", 
		"COMMA", "CONST", "DIV", "DIVIDE", "DO", "DOTDOT", "DOWNTO", "ELSE", "END", 
		"EQUALS", "FOR", "GREATERTHAN", "GREATERTHANOREQUALTO", "IF", "IN", "LBRACE", 
		"LESSTHAN", "LBRACKET", "LESSTHANOREQUALTO", "LPAREN", "LSHIFT", "MINUS", 
		"MOD", "NOTEQUALTO", "OF", "OR", "NOT", "PERIOD", "PLUS", "PRINTF", "PROGRAM", 
		"RBRACE", "RBRACKET", "REPEAT", "RPAREN", "RSHIFT", "SEMICOLON", "SET", 
		"SYMMETRIC_DIFFERENCE", "THEN", "TIMES", "TO", "UNTIL", "VAR", "WHILE", 
		"DECIMALINTEGERLITERAL", "HEXADECIMALINTEGERLITERAL", "OCTALINTEGERLITERAL", 
		"FLOATINGPOINTLITERAL", "STRINGLITERAL", "IDENT", "UnterminatedStringLiteral", 
		"COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Asa.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AsaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(AsaParser.PROGRAM, 0); }
		public TerminalNode IDENT() { return getToken(AsaParser.IDENT, 0); }
		public TerminalNode SEMICOLON() { return getToken(AsaParser.SEMICOLON, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode PERIOD() { return getToken(AsaParser.PERIOD, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsaVisitor ) return ((AsaVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(PROGRAM);
			setState(57);
			match(IDENT);
			setState(58);
			match(SEMICOLON);
			setState(59);
			block();
			setState(60);
			match(PERIOD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public Compound_statementContext compound_statement() {
			return getRuleContext(Compound_statementContext.class,0);
		}
		public TerminalNode CONST() { return getToken(AsaParser.CONST, 0); }
		public TerminalNode VAR() { return getToken(AsaParser.VAR, 0); }
		public List<Constant_definitionContext> constant_definition() {
			return getRuleContexts(Constant_definitionContext.class);
		}
		public Constant_definitionContext constant_definition(int i) {
			return getRuleContext(Constant_definitionContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(AsaParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(AsaParser.SEMICOLON, i);
		}
		public List<Variable_declarationContext> variable_declaration() {
			return getRuleContexts(Variable_declarationContext.class);
		}
		public Variable_declarationContext variable_declaration(int i) {
			return getRuleContext(Variable_declarationContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsaVisitor ) return ((AsaVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONST) {
				{
				setState(62);
				match(CONST);
				setState(66); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(63);
					constant_definition();
					setState(64);
					match(SEMICOLON);
					}
					}
					setState(68); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==IDENT );
				}
			}

			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(72);
				match(VAR);
				setState(76); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(73);
					variable_declaration();
					setState(74);
					match(SEMICOLON);
					}
					}
					setState(78); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==IDENT );
				}
			}

			setState(82);
			compound_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Constant_definitionContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(AsaParser.IDENT, 0); }
		public TerminalNode EQUALS() { return getToken(AsaParser.EQUALS, 0); }
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public Constant_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsaVisitor ) return ((AsaVisitor<? extends T>)visitor).visitConstant_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Constant_definitionContext constant_definition() throws RecognitionException {
		Constant_definitionContext _localctx = new Constant_definitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_constant_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(IDENT);
			setState(85);
			match(EQUALS);
			setState(86);
			literal();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
	 
		public LiteralContext() { }
		public void copyFrom(LiteralContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BooleanLiteralAltContext extends LiteralContext {
		public BooleanLiteralContext booleanLiteral() {
			return getRuleContext(BooleanLiteralContext.class,0);
		}
		public BooleanLiteralAltContext(LiteralContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsaVisitor ) return ((AsaVisitor<? extends T>)visitor).visitBooleanLiteralAlt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FloatingLiteralAltContext extends LiteralContext {
		public TerminalNode FLOATINGPOINTLITERAL() { return getToken(AsaParser.FLOATINGPOINTLITERAL, 0); }
		public FloatingLiteralAltContext(LiteralContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsaVisitor ) return ((AsaVisitor<? extends T>)visitor).visitFloatingLiteralAlt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StringLiteralAltContext extends LiteralContext {
		public TerminalNode STRINGLITERAL() { return getToken(AsaParser.STRINGLITERAL, 0); }
		public StringLiteralAltContext(LiteralContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsaVisitor ) return ((AsaVisitor<? extends T>)visitor).visitStringLiteralAlt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IntegerLiteralAltContext extends LiteralContext {
		public IntegerLiteralContext integerLiteral() {
			return getRuleContext(IntegerLiteralContext.class,0);
		}
		public IntegerLiteralAltContext(LiteralContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsaVisitor ) return ((AsaVisitor<? extends T>)visitor).visitIntegerLiteralAlt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SetLiteralAltContext extends LiteralContext {
		public SetLiteralContext setLiteral() {
			return getRuleContext(SetLiteralContext.class,0);
		}
		public SetLiteralAltContext(LiteralContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsaVisitor ) return ((AsaVisitor<? extends T>)visitor).visitSetLiteralAlt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_literal);
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DECIMALINTEGERLITERAL:
			case HEXADECIMALINTEGERLITERAL:
			case OCTALINTEGERLITERAL:
				_localctx = new IntegerLiteralAltContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				integerLiteral();
				}
				break;
			case FLOATINGPOINTLITERAL:
				_localctx = new FloatingLiteralAltContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				match(FLOATINGPOINTLITERAL);
				}
				break;
			case STRINGLITERAL:
				_localctx = new StringLiteralAltContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(90);
				match(STRINGLITERAL);
				}
				break;
			case T__0:
			case T__1:
				_localctx = new BooleanLiteralAltContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(91);
				booleanLiteral();
				}
				break;
			case LBRACKET:
				_localctx = new SetLiteralAltContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(92);
				setLiteral();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntegerLiteralContext extends ParserRuleContext {
		public IntegerLiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integerLiteral; }
	 
		public IntegerLiteralContext() { }
		public void copyFrom(IntegerLiteralContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class OctalIntegerLiteralAltContext extends IntegerLiteralContext {
		public TerminalNode OCTALINTEGERLITERAL() { return getToken(AsaParser.OCTALINTEGERLITERAL, 0); }
		public OctalIntegerLiteralAltContext(IntegerLiteralContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsaVisitor ) return ((AsaVisitor<? extends T>)visitor).visitOctalIntegerLiteralAlt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DecimalIntegerLiteralAltContext extends IntegerLiteralContext {
		public TerminalNode DECIMALINTEGERLITERAL() { return getToken(AsaParser.DECIMALINTEGERLITERAL, 0); }
		public DecimalIntegerLiteralAltContext(IntegerLiteralContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsaVisitor ) return ((AsaVisitor<? extends T>)visitor).visitDecimalIntegerLiteralAlt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class HexadecimalIntegerLiteralAltContext extends IntegerLiteralContext {
		public TerminalNode HEXADECIMALINTEGERLITERAL() { return getToken(AsaParser.HEXADECIMALINTEGERLITERAL, 0); }
		public HexadecimalIntegerLiteralAltContext(IntegerLiteralContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsaVisitor ) return ((AsaVisitor<? extends T>)visitor).visitHexadecimalIntegerLiteralAlt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntegerLiteralContext integerLiteral() throws RecognitionException {
		IntegerLiteralContext _localctx = new IntegerLiteralContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_integerLiteral);
		try {
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DECIMALINTEGERLITERAL:
				_localctx = new DecimalIntegerLiteralAltContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				match(DECIMALINTEGERLITERAL);
				}
				break;
			case HEXADECIMALINTEGERLITERAL:
				_localctx = new HexadecimalIntegerLiteralAltContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				match(HEXADECIMALINTEGERLITERAL);
				}
				break;
			case OCTALINTEGERLITERAL:
				_localctx = new OctalIntegerLiteralAltContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(97);
				match(OCTALINTEGERLITERAL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BooleanLiteralContext extends ParserRuleContext {
		public BooleanLiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanLiteral; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsaVisitor ) return ((AsaVisitor<? extends T>)visitor).visitBooleanLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BooleanLiteralContext booleanLiteral() throws RecognitionException {
		BooleanLiteralContext _localctx = new BooleanLiteralContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_booleanLiteral);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_la = _input.LA(1);
			if ( !(_la==T__0 || _la==T__1) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetLiteralContext extends ParserRuleContext {
		public TerminalNode LBRACKET() { return getToken(AsaParser.LBRACKET, 0); }
		public List<IntegerLiteralContext> integerLiteral() {
			return getRuleContexts(IntegerLiteralContext.class);
		}
		public IntegerLiteralContext integerLiteral(int i) {
			return getRuleContext(IntegerLiteralContext.class,i);
		}
		public TerminalNode RBRACKET() { return getToken(AsaParser.RBRACKET, 0); }
		public List<TerminalNode> COMMA() { return getTokens(AsaParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AsaParser.COMMA, i);
		}
		public SetLiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setLiteral; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsaVisitor ) return ((AsaVisitor<? extends T>)visitor).visitSetLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetLiteralContext setLiteral() throws RecognitionException {
		SetLiteralContext _localctx = new SetLiteralContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_setLiteral);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(LBRACKET);
			setState(103);
			integerLiteral();
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(104);
				match(COMMA);
				setState(105);
				integerLiteral();
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_declarationContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(AsaParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(AsaParser.IDENT, i);
		}
		public TerminalNode COLON() { return getToken(AsaParser.COLON, 0); }
		public AtypeContext atype() {
			return getRuleContext(AtypeContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(AsaParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AsaParser.COMMA, i);
		}
		public Variable_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsaVisitor ) return ((AsaVisitor<? extends T>)visitor).visitVariable_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Variable_declarationContext variable_declaration() throws RecognitionException {
		Variable_declarationContext _localctx = new Variable_declarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_variable_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(IDENT);
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(114);
				match(COMMA);
				setState(115);
				match(IDENT);
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121);
			match(COLON);
			setState(122);
			atype();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtypeContext extends ParserRuleContext {
		public AtypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atype; }
	 
		public AtypeContext() { }
		public void copyFrom(AtypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ArrayContext extends AtypeContext {
		public TerminalNode ARRAY() { return getToken(AsaParser.ARRAY, 0); }
		public TerminalNode LBRACKET() { return getToken(AsaParser.LBRACKET, 0); }
		public List<IntegerLiteralContext> integerLiteral() {
			return getRuleContexts(IntegerLiteralContext.class);
		}
		public IntegerLiteralContext integerLiteral(int i) {
			return getRuleContext(IntegerLiteralContext.class,i);
		}
		public TerminalNode DOTDOT() { return getToken(AsaParser.DOTDOT, 0); }
		public TerminalNode RBRACKET() { return getToken(AsaParser.RBRACKET, 0); }
		public TerminalNode OF() { return getToken(AsaParser.OF, 0); }
		public AtypeContext atype() {
			return getRuleContext(AtypeContext.class,0);
		}
		public ArrayContext(AtypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsaVisitor ) return ((AsaVisitor<? extends T>)visitor).visitArray(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IdentContext extends AtypeContext {
		public TerminalNode IDENT() { return getToken(AsaParser.IDENT, 0); }
		public IdentContext(AtypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsaVisitor ) return ((AsaVisitor<? extends T>)visitor).visitIdent(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SetContext extends AtypeContext {
		public TerminalNode SET() { return getToken(AsaParser.SET, 0); }
		public SetContext(AtypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsaVisitor ) return ((AsaVisitor<? extends T>)visitor).visitSet(this);
			else return visitor.visitChildren(this);
		}
	}
